--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,8 @@
     color: white;
     background-color: #0a0a0a;
 }
+::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
