--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,16 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+
+.swiper {
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 500px;
+    height: 230px;
+}
